- Added the default flag to the variables so they can be overridden. - .row [class^="col"] meant you had to place the col-X before any other class on the element, considering the already super small size of this grid, explicitly declaring the row col-X makes this grid more flexible. - phpstorm has automatically styled some of the spacing, hope this is not an issue.

--- a/the-grid.scss
+++ b/the-grid.scss
@@ -1,17 +1,18 @@
 // grid
 
-$width: 96%;
-$gutter: 4%;
-$breakpoint-small: 33.75em; // 540px
-$breakpoint-med: 45em; // 720px
-$breakpoint-large: 60em; // 960px
+$container_width: 90% !default;
+$width: 96% !default;
+$gutter: 4% !default;
+$breakpoint-small: 33.75em !default; // 540px
+$breakpoint-med: 45em !default; // 720px
+$breakpoint-large: 60em !default; // 960px
 
 .hidden-sm {
     display: none;
 }
 
 .container {
-    width: 90%;
+    width: $container_width;
     margin-left: auto;
     margin-right: auto;
 
@@ -30,10 +31,33 @@ $breakpoint-large: 60em; // 960px
     width: 100%;
 }
 
-.row [class^="col"] {
-    float: left;
-    margin: 0.5rem 2%;
-    min-height: 0.125rem;
+.row {
+    position: relative;
+    width: 100%;
+
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .col-1, .col-1-sm,
+    .col-2, .col-2-sm,
+    .col-3, .col-3-sm,
+    .col-4, .col-4-sm,
+    .col-5, .col-5-sm,
+    .col-6, .col-6-sm,
+    .col-7, .col-7-sm,
+    .col-8, .col-8-sm,
+    .col-9, .col-9-sm,
+    .col-10, .col-10-sm,
+    .col-11, .col-11-sm,
+    .col-12, .col-12-sm{
+        float: left;
+        margin: 0.5rem 2%;
+        min-height: 0.125rem;
+    }
+
 }
 
 .row::after {
